--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,3 @@
 [deps]
-ArtifactUtils = "8b73e784-e7d8-4ea5-973d-377fed4e3bce"
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+FFMPEG_jll = "b22a6f82-2f65-5046-a5b2-351ab43fb4e5"
+Git_jll = "f8c6e375-362e-5223-8a59-34ff63f689eb"
